parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Unused terminals:

    WS

Grammar

Rule 0     S' -> program
Rule 1     program -> file_input_star ENDMARKER
Rule 2     file_input_star -> NEWLINE
Rule 3     file_input_star -> stmt
Rule 4     file_input_star -> file_input_star stmt
Rule 5     suite -> simple_stmt
Rule 6     suite -> NEWLINE INDENT stmt_list DEDENT
Rule 7     stmt_list -> stmt stmt_list
Rule 8     stmt_list -> stmt
Rule 9     stmt -> simple_stmt
Rule 10    stmt -> compound_stmt
Rule 11    simple_stmt -> small_stmt NEWLINE
Rule 12    simple_stmt -> small_stmt_list NEWLINE
Rule 13    small_stmt_list -> small_stmt SEMI
Rule 14    small_stmt_list -> small_stmt small_stmt_list_list
Rule 15    small_stmt_list -> small_stmt small_stmt_list_list SEMI
Rule 16    small_stmt_list_list -> SEMI small_stmt
Rule 17    small_stmt_list_list -> small_stmt_list_list SEMI small_stmt
Rule 18    small_stmt -> expr_stmt
Rule 19    small_stmt -> print_stmt
Rule 20    small_stmt -> return_stmt
Rule 21    print_stmt -> PRINT
Rule 22    print_stmt -> PRINT test
Rule 23    print_stmt -> PRINT print_list
Rule 24    print_list -> test COMMA
Rule 25    print_list -> test print_list_list
Rule 26    print_list -> test print_list_list COMMA
Rule 27    print_list_list -> COMMA test
Rule 28    print_list_list -> print_list_list COMMA test
Rule 29    return_stmt -> RETURN
Rule 30    return_stmt -> RETURN testlist
Rule 31    expr_stmt -> testlist
Rule 32    expr_stmt -> testlist equal_list
Rule 33    equal_list -> EQUAL testlist
Rule 34    equal_list -> EQUAL testlist equal_list
Rule 35    testlist -> test
Rule 36    testlist -> test COMMA
Rule 37    testlist -> test testlist_list
Rule 38    testlist -> test testlist_list COMMA
Rule 39    testlist_list -> COMMA test
Rule 40    testlist_list -> testlist_list COMMA test
Rule 41    compound_stmt -> if_stmt
Rule 42    compound_stmt -> while_stmt
Rule 43    compound_stmt -> for_stmt
Rule 44    compound_stmt -> funcdef
Rule 45    if_stmt -> IF test COLON suite
Rule 46    if_stmt -> IF test COLON suite else_stmt
Rule 47    else_stmt -> ELSE COLON suite
Rule 48    while_stmt -> WHILE test COLON suite
Rule 49    for_stmt -> FOR NAME IN testlist COLON suite
Rule 50    funcdef -> DEF NAME parameters COLON suite
Rule 51    parameters -> LPAR RPAR
Rule 52    parameters -> LPAR varargslist RPAR
Rule 53    test -> or_test
Rule 54    or_test -> and_test
Rule 55    or_test -> and_test or_test_list
Rule 56    or_test_list -> OR and_test
Rule 57    or_test_list -> or_test_list OR and_test
Rule 58    and_test -> not_test
Rule 59    and_test -> not_test and_test_list
Rule 60    and_test_list -> AND not_test
Rule 61    and_test_list -> and_test_list AND not_test
Rule 62    not_test -> comparison
Rule 63    not_test -> NOT not_test
Rule 64    comparison -> arith_expr
Rule 65    comparison -> arith_expr comparison_list
Rule 66    comparison_list -> comp_op arith_expr
Rule 67    comparison_list -> comparison_list comp_op arith_expr
Rule 68    comp_op -> LESS
Rule 69    comp_op -> GREATER
Rule 70    comp_op -> EQEQUAL
Rule 71    comp_op -> GREATEREQUAL
Rule 72    comp_op -> LESSEQUAL
Rule 73    comp_op -> NOTEQUAL
Rule 74    arith_expr -> term
Rule 75    arith_expr -> term arith_expr_list
Rule 76    arith_expr_list -> arith_op
Rule 77    arith_expr_list -> arith_expr_list arith_op
Rule 78    arith_op -> PLUS term
Rule 79    arith_op -> MINUS term
Rule 80    term -> power
Rule 81    term -> power term_list
Rule 82    term_list -> term_op
Rule 83    term_list -> term_list term_op
Rule 84    term_op -> STAR power
Rule 85    term_op -> SLASH power
Rule 86    power -> atom
Rule 87    power -> atom power_list
Rule 88    power_list -> trailer
Rule 89    power_list -> power_list trailer
Rule 90    atom -> LPAR RPAR
Rule 91    atom -> LPAR testlist_comp RPAR
Rule 92    atom -> LSQB RSQB
Rule 93    atom -> LSQB listmaker RSQB
Rule 94    atom -> LBRACE RBRACE
Rule 95    atom -> LBRACE dictorsetmaker RBRACE
Rule 96    atom -> NAME
Rule 97    atom -> NUMBER
Rule 98    atom -> atom_string_list
Rule 99    atom_string_list -> STRING
Rule 100   atom_string_list -> atom_string_list STRING
Rule 101   listmaker -> test
Rule 102   listmaker -> test COMMA
Rule 103   listmaker -> test listmaker_list
Rule 104   listmaker -> test listmaker_list COMMA
Rule 105   listmaker_list -> COMMA test
Rule 106   listmaker_list -> listmaker_list COMMA test
Rule 107   testlist_comp -> test
Rule 108   testlist_comp -> test COMMA
Rule 109   testlist_comp -> test testlist_comp_list
Rule 110   testlist_comp -> test testlist_comp_list COMMA
Rule 111   testlist_comp_list -> COMMA test
Rule 112   testlist_comp_list -> testlist_comp_list COMMA test
Rule 113   trailer -> LPAR RPAR
Rule 114   trailer -> LPAR arglist RPAR
Rule 115   trailer -> LSQB subscriptlist RSQB
Rule 116   subscriptlist -> subscript
Rule 117   subscriptlist -> subscript COMMA
Rule 118   subscriptlist -> subscript subscriptlist_list
Rule 119   subscriptlist -> subscript subscriptlist_list COMMA
Rule 120   subscriptlist_list -> COMMA subscript
Rule 121   subscriptlist_list -> subscriptlist_list COMMA subscript
Rule 122   subscript -> test
Rule 123   dictorsetmaker -> test COLON test
Rule 124   dictorsetmaker -> test COLON test COMMA
Rule 125   dictorsetmaker -> test COLON test dosm_colon_list
Rule 126   dictorsetmaker -> test COLON test dosm_colon_list COMMA
Rule 127   dosm_colon_list -> COMMA test COLON test
Rule 128   dosm_colon_list -> dosm_colon_list COMMA test COLON test
Rule 129   arglist -> argument
Rule 130   arglist -> argument COMMA
Rule 131   arglist -> arglist_list argument
Rule 132   arglist -> arglist_list argument COMMA
Rule 133   arglist_list -> argument COMMA
Rule 134   arglist_list -> arglist_list argument COMMA
Rule 135   argument -> test
Rule 136   argument -> test EQUAL test
Rule 137   varargslist -> fpdef
Rule 138   varargslist -> fpdef COMMA
Rule 139   varargslist -> fpdef varargslist_list
Rule 140   varargslist -> fpdef varargslist_list COMMA
Rule 141   varargslist -> fpdef EQUAL test
Rule 142   varargslist -> fpdef EQUAL test COMMA
Rule 143   varargslist -> fpdef EQUAL test varargslist_list
Rule 144   varargslist -> fpdef EQUAL test varargslist_list COMMA
Rule 145   varargslist_list -> COMMA fpdef
Rule 146   varargslist_list -> COMMA fpdef EQUAL test
Rule 147   varargslist_list -> varargslist_list COMMA fpdef
Rule 148   varargslist_list -> varargslist_list COMMA fpdef EQUAL test
Rule 149   fpdef -> NAME
Rule 150   fpdef -> LPAR fplist RPAR
Rule 151   fplist -> fpdef
Rule 152   fplist -> fpdef COMMA
Rule 153   fplist -> fpdef fplist_list
Rule 154   fplist -> fpdef fplist_list COMMA
Rule 155   fplist_list -> COMMA fpdef
Rule 156   fplist_list -> fplist_list COMMA fpdef

Terminals, with rules where they appear

AND                  : 60 61
COLON                : 45 46 47 48 49 50 123 124 125 126 127 128
COMMA                : 24 26 27 28 36 38 39 40 102 104 105 106 108 110 111 112 117 119 120 121 124 126 127 128 130 132 133 134 138 140 142 144 145 146 147 148 152 154 155 156
DEDENT               : 6
DEF                  : 50
ELSE                 : 47
ENDMARKER            : 1
EQEQUAL              : 70
EQUAL                : 33 34 136 141 142 143 144 146 148
FOR                  : 49
GREATER              : 69
GREATEREQUAL         : 71
IF                   : 45 46
IN                   : 49
INDENT               : 6
LBRACE               : 94 95
LESS                 : 68
LESSEQUAL            : 72
LPAR                 : 51 52 90 91 113 114 150
LSQB                 : 92 93 115
MINUS                : 79
NAME                 : 49 50 96 149
NEWLINE              : 2 6 11 12
NOT                  : 63
NOTEQUAL             : 73
NUMBER               : 97
OR                   : 56 57
PLUS                 : 78
PRINT                : 21 22 23
RBRACE               : 94 95
RETURN               : 29 30
RPAR                 : 51 52 90 91 113 114 150
RSQB                 : 92 93 115
SEMI                 : 13 15 16 17
SLASH                : 85
STAR                 : 84
STRING               : 99 100
WHILE                : 48
WS                   : 
error                : 

Nonterminals, with rules where they appear

and_test             : 54 55 56 57
and_test_list        : 59 61
arglist              : 114
arglist_list         : 131 132 134
argument             : 129 130 131 132 133 134
arith_expr           : 64 65 66 67
arith_expr_list      : 75 77
arith_op             : 76 77
atom                 : 86 87
atom_string_list     : 98 100
comp_op              : 66 67
comparison           : 62
comparison_list      : 65 67
compound_stmt        : 10
dictorsetmaker       : 95
dosm_colon_list      : 125 126 128
else_stmt            : 46
equal_list           : 32 34
expr_stmt            : 18
file_input_star      : 1 4
for_stmt             : 43
fpdef                : 137 138 139 140 141 142 143 144 145 146 147 148 151 152 153 154 155 156
fplist               : 150
fplist_list          : 153 154 156
funcdef              : 44
if_stmt              : 41
listmaker            : 93
listmaker_list       : 103 104 106
not_test             : 58 59 60 61 63
or_test              : 53
or_test_list         : 55 57
parameters           : 50
power                : 80 81 84 85
power_list           : 87 89
print_list           : 23
print_list_list      : 25 26 28
print_stmt           : 19
program              : 0
return_stmt          : 20
simple_stmt          : 5 9
small_stmt           : 11 13 14 15 16 17
small_stmt_list      : 12
small_stmt_list_list : 14 15 17
stmt                 : 3 4 7 8
stmt_list            : 6 7
subscript            : 116 117 118 119 120 121
subscriptlist        : 115
subscriptlist_list   : 118 119 121
suite                : 45 46 47 48 49 50
term                 : 74 75 78 79
term_list            : 81 83
term_op              : 82 83
test                 : 22 24 25 26 27 28 35 36 37 38 39 40 45 46 48 101 102 103 104 105 106 107 108 109 110 111 112 122 123 123 124 124 125 125 126 126 127 127 128 128 135 136 136 141 142 143 144 146 148
testlist             : 30 31 32 33 34 49
testlist_comp        : 91
testlist_comp_list   : 109 110 112
testlist_list        : 37 38 40
trailer              : 88 89
varargslist          : 52
varargslist_list     : 139 140 143 144 147 148
while_stmt           : 42

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . file_input_star ENDMARKER
    (2) file_input_star -> . NEWLINE
    (3) file_input_star -> . stmt
    (4) file_input_star -> . file_input_star stmt
    (9) stmt -> . simple_stmt
    (10) stmt -> . compound_stmt
    (11) simple_stmt -> . small_stmt NEWLINE
    (12) simple_stmt -> . small_stmt_list NEWLINE
    (41) compound_stmt -> . if_stmt
    (42) compound_stmt -> . while_stmt
    (43) compound_stmt -> . for_stmt
    (44) compound_stmt -> . funcdef
    (18) small_stmt -> . expr_stmt
    (19) small_stmt -> . print_stmt
    (20) small_stmt -> . return_stmt
    (13) small_stmt_list -> . small_stmt SEMI
    (14) small_stmt_list -> . small_stmt small_stmt_list_list
    (15) small_stmt_list -> . small_stmt small_stmt_list_list SEMI
    (45) if_stmt -> . IF test COLON suite
    (46) if_stmt -> . IF test COLON suite else_stmt
    (48) while_stmt -> . WHILE test COLON suite
    (49) for_stmt -> . FOR NAME IN testlist COLON suite
    (50) funcdef -> . DEF NAME parameters COLON suite
    (31) expr_stmt -> . testlist
    (32) expr_stmt -> . testlist equal_list
    (21) print_stmt -> . PRINT
    (22) print_stmt -> . PRINT test
    (23) print_stmt -> . PRINT print_list
    (29) return_stmt -> . RETURN
    (30) return_stmt -> . RETURN testlist
    (35) testlist -> . test
    (36) testlist -> . test COMMA
    (37) testlist -> . test testlist_list
    (38) testlist -> . test testlist_list COMMA
    (53) test -> . or_test
    (54) or_test -> . and_test
    (55) or_test -> . and_test or_test_list
    (58) and_test -> . not_test
    (59) and_test -> . not_test and_test_list
    (62) not_test -> . comparison
    (63) not_test -> . NOT not_test
    (64) comparison -> . arith_expr
    (65) comparison -> . arith_expr comparison_list
    (74) arith_expr -> . term
    (75) arith_expr -> . term arith_expr_list
    (80) term -> . power
    (81) term -> . power term_list
    (86) power -> . atom
    (87) power -> . atom power_list
    (90) atom -> . LPAR RPAR
    (91) atom -> . LPAR testlist_comp RPAR
    (92) atom -> . LSQB RSQB
    (93) atom -> . LSQB listmaker RSQB
    (94) atom -> . LBRACE RBRACE
    (95) atom -> . LBRACE dictorsetmaker RBRACE
    (96) atom -> . NAME
    (97) atom -> . NUMBER
    (98) atom -> . atom_string_list
    (99) atom_string_list -> . STRING
    (100) atom_string_list -> . atom_string_list STRING

    NEWLINE         shift and go to state 16
    IF              shift and go to state 32
    WHILE           shift and go to state 8
    FOR             shift and go to state 22
    DEF             shift and go to state 13
    PRINT           shift and go to state 11
    RETURN          shift and go to state 12
    NOT             shift and go to state 26
    LPAR            shift and go to state 1
    LSQB            shift and go to state 30
    LBRACE          shift and go to state 35
    NAME            shift and go to state 2
    NUMBER          shift and go to state 6
    STRING          shift and go to state 20

    small_stmt                     shift and go to state 3
    atom_string_list               shift and go to state 5
    small_stmt_list                shift and go to state 7
    return_stmt                    shift and go to state 9
    not_test                       shift and go to state 10
    file_input_star                shift and go to state 14
    simple_stmt                    shift and go to state 17
    program                        shift and go to state 18
    test                           shift and go to state 19
    compound_stmt                  shift and go to state 21
    power                          shift and go to state 15
    print_stmt                     shift and go to state 23
    testlist                       shift and go to state 24
    stmt                           shift and go to state 25
    for_stmt                       shift and go to state 27
    and_test                       shift and go to state 28
    atom                           shift and go to state 4
    funcdef                        shift and go to state 29
    expr_stmt                      shift and go to state 31
    comparison                     shift and go to state 33
    term                           shift and go to state 34
    if_stmt                        shift and go to state 36
    arith_expr                     shift and go to state 37
    or_test                        shift and go to state 38
    while_stmt                     shift and go to state 39

state 1

    (90) atom -> LPAR . RPAR
    (91) atom -> LPAR . testlist_comp RPAR
    (107) testlist_comp -> . test
    (108) testlist_comp -> . test COMMA
    (109) testlist_comp -> . test testlist_comp_list
    (110) testlist_comp -> . test testlist_comp_list COMMA
    (53) test -> . or_test
    (54) or_test -> . and_test
    (55) or_test -> . and_test or_test_list
    (58) and_test -> . not_test
    (59) and_test -> . not_test and_test_list
    (62) not_test -> . comparison
    (63) not_test -> . NOT not_test
    (64) comparison -> . arith_expr
    (65) comparison -> . arith_expr comparison_list
    (74) arith_expr -> . term
    (75) arith_expr -> . term arith_expr_list
    (80) term -> . power
    (81) term -> . power term_list
    (86) power -> . atom
    (87) power -> . atom power_list
    (90) atom -> . LPAR RPAR
    (91) atom -> . LPAR testlist_comp RPAR
    (92) atom -> . LSQB RSQB
    (93) atom -> . LSQB listmaker RSQB
    (94) atom -> . LBRACE RBRACE
    (95) atom -> . LBRACE dictorsetmaker RBRACE
    (96) atom -> . NAME
    (97) atom -> . NUMBER
    (98) atom -> . atom_string_list
    (99) atom_string_list -> . STRING
    (100) atom_string_list -> . atom_string_list STRING

    RPAR            shift and go to state 40
    NOT             shift and go to state 26
    LPAR            shift and go to state 1
    LSQB            shift and go to state 30
    LBRACE          shift and go to state 35
    NAME            shift and go to state 2
    NUMBER          shift and go to state 6
    STRING          shift and go to state 20

    comparison                     shift and go to state 33
    term                           shift and go to state 34
    arith_expr                     shift and go to state 37
    atom_string_list               shift and go to state 5
    or_test                        shift and go to state 38
    and_test                       shift and go to state 28
    power                          shift and go to state 15
    atom                           shift and go to state 4
    not_test                       shift and go to state 10
    testlist_comp                  shift and go to state 41
    test                           shift and go to state 42

state 2

    (96) atom -> NAME .

    LPAR            reduce using rule 96 (atom -> NAME .)
    LSQB            reduce using rule 96 (atom -> NAME .)
    STAR            reduce using rule 96 (atom -> NAME .)
    SLASH           reduce using rule 96 (atom -> NAME .)
    PLUS            reduce using rule 96 (atom -> NAME .)
    MINUS           reduce using rule 96 (atom -> NAME .)
    LESS            reduce using rule 96 (atom -> NAME .)
    GREATER         reduce using rule 96 (atom -> NAME .)
    EQEQUAL         reduce using rule 96 (atom -> NAME .)
    GREATEREQUAL    reduce using rule 96 (atom -> NAME .)
    LESSEQUAL       reduce using rule 96 (atom -> NAME .)
    NOTEQUAL        reduce using rule 96 (atom -> NAME .)
    AND             reduce using rule 96 (atom -> NAME .)
    OR              reduce using rule 96 (atom -> NAME .)
    COMMA           reduce using rule 96 (atom -> NAME .)
    EQUAL           reduce using rule 96 (atom -> NAME .)
    NEWLINE         reduce using rule 96 (atom -> NAME .)
    SEMI            reduce using rule 96 (atom -> NAME .)
    RPAR            reduce using rule 96 (atom -> NAME .)
    COLON           reduce using rule 96 (atom -> NAME .)
    RSQB            reduce using rule 96 (atom -> NAME .)
    RBRACE          reduce using rule 96 (atom -> NAME .)


state 3

    (11) simple_stmt -> small_stmt . NEWLINE
    (13) small_stmt_list -> small_stmt . SEMI
    (14) small_stmt_list -> small_stmt . small_stmt_list_list
    (15) small_stmt_list -> small_stmt . small_stmt_list_list SEMI
    (16) small_stmt_list_list -> . SEMI small_stmt
    (17) small_stmt_list_list -> . small_stmt_list_list SEMI small_stmt

    NEWLINE         shift and go to state 44
    SEMI            shift and go to state 45

    small_stmt_list_list           shift and go to state 43

state 4

    (86) power -> atom .
    (87) power -> atom . power_list
    (88) power_list -> . trailer
    (89) power_list -> . power_list trailer
    (113) trailer -> . LPAR RPAR
    (114) trailer -> . LPAR arglist RPAR
    (115) trailer -> . LSQB subscriptlist RSQB

    STAR            reduce using rule 86 (power -> atom .)
    SLASH           reduce using rule 86 (power -> atom .)
    PLUS            reduce using rule 86 (power -> atom .)
    MINUS           reduce using rule 86 (power -> atom .)
    LESS            reduce using rule 86 (power
     -> atom .)
    GREATER         reduce using rule 86 (power -> atom .)
    EQEQUAL         reduce using rule 86 (power -> atom .)
    GREATEREQUAL    reduce using rule 86 (power -> atom .)
    LESSEQUAL       reduce using rule 86 (power -> atom .)
    NOTEQUAL        reduce using rule 86 (power -> atom .)
    AND             reduce using rule 86 (power -> atom .)
    OR              reduce using rule 86 (power -> atom .)
    COMMA           reduce using rule 86 (power -> atom .)
    EQUAL           reduce using rule 86 (power -> atom .)
    NEWLINE         reduce using rule 86 (power -> atom .)
    SEMI            reduce using rule 86 (power -> atom .)
    RSQB            reduce using rule 86 (power -> atom .)
    RPAR            reduce using rule 86 (power -> atom .)
    COLON           reduce using rule 86 (power -> atom .)
    RBRACE          reduce using rule 86 (power -> atom .)
    LPAR            shift and go to state 46
    LSQB            shift and go to state 48

    power_list                     shift and go to state 47
    trailer                        shift and go to state 49

state 5

    (98) atom -> atom_string_list .
    (100) atom_string_list -> atom_string_list . STRING

    LPAR            reduce using rule 98 (atom -> atom_string_list .)
    LSQB            reduce using rule 98 (atom -> atom_string_list .)
    STAR            reduce using rule 98 (atom -> atom_string_list .)
    SLASH           reduce using rule 98 (atom -> atom_string_list .)
    PLUS            reduce using rule 98 (atom -> atom_string_list .)
    MINUS           reduce using rule 98 (atom -> atom_string_list .)
    LESS            reduce using rule 98 (atom -> atom_string_list .)
    GREATER         reduce using rule 98 (atom -> atom_string_list .)
    EQEQUAL         reduce using rule 98 (atom -> atom_string_list .)
    GREATEREQUAL    reduce using rule 98 (atom -> atom_string_list .)
    LESSEQUAL       reduce using rule 98 (atom -> atom_string_list .)
    NOTEQUAL        reduce using rule 98 (atom -> atom_string_list .)
    AND             reduce using rule 98 (atom -> atom_string_list .)
    OR              reduce using rule 98 (atom -> atom_string_list .)
    COMMA           reduce using rule 98 (atom -> atom_string_list .)
    EQUAL           reduce using rule 98 (atom -> atom_string_list .)
    NEWLINE         reduce using rule 98 (atom -> atom_string_list .)
    SEMI            reduce using rule 98 (atom -> atom_string_list .)
    RPAR            reduce using rule 98 (atom -> atom_string_list .)
    COLON           reduce using rule 98 (atom -> atom_string_list .)
    RSQB            reduce using rule 98 (atom -> atom_string_list .)
    RBRACE          reduce using rule 98 (atom -> atom_string_list .)
    STRING          shift and go to state 50


state 6

    (97) atom -> NUMBER .

    LPAR            reduce using rule 97 (atom -> NUMBER .)
    LSQB            reduce using rule 97 (atom -> NUMBER .)
    STAR            reduce using rule 97 (atom -> NUMBER .)
    SLASH           reduce using rule 97 (atom -> NUMBER .)
    PLUS            reduce using rule 97 (atom -> NUMBER .)
    MINUS           reduce using rule 97 (atom -> NUMBER .)
    LESS            reduce using rule 97 (atom -> NUMBER .)
    GREATER         reduce using rule 97 (atom -> NUMBER .)
    EQEQUAL         reduce using rule 97 (atom -> NUMBER .)
    GREATEREQUAL    reduce using rule 97 (atom -> NUMBER .)
    LESSEQUAL       reduce using rule 97 (atom -> NUMBER .)
    NOTEQUAL        reduce using rule 97 (atom -> NUMBER .)
    AND             reduce using rule 97 (atom -> NUMBER .)
    OR              reduce using rule 97 (atom -> NUMBER .)
    COMMA           reduce using rule 97 (atom -> NUMBER .)
    EQUAL           reduce using rule 97 (atom -> NUMBER .)
    NEWLINE         reduce using rule 97 (atom -> NUMBER .)
    SEMI            reduce using rule 97 (atom -> NUMBER .)
    RPAR            reduce using rule 97 (atom -> NUMBER .)
    COLON           reduce using rule 97 (atom -> NUMBER .)
    RSQB            reduce using rule 97 (atom -> NUMBER .)
    RBRACE          reduce using rule 97 (atom -> NUMBER .)


state 7

    (12) simple_stmt -> small_stmt_list . NEWLINE

    NEWLINE         shift and go to state 51


state 8

    (48) while_stmt -> WHILE . test COLON suite
    (53) test -> . or_test
    (54) or_test -> . and_test
    (55) or_test -> . and_test or_test_list
    (58) and_test -> . not_test
    (59) and_test -> . not_test and_test_list
    (62) not_test -> . comparison
    (63) not_test -> . NOT not_test
    (64) comparison -> . arith_expr
    (65) comparison -> . arith_expr comparison_list
    (74) arith_expr -> . term
    (75) arith_expr -> . term arith_expr_list
    (80) term -> . power
    (81) term -> . power term_list
    (86) power -> . atom
    (87) power -> . atom power_list
    (90) atom -> . LPAR RPAR
    (91) atom -> . LPAR testlist_comp RPAR
    (92) atom -> . LSQB RSQB
    (93) atom -> . LSQB listmaker RSQB
    (94) atom -> . LBRACE RBRACE
    (95) atom -> . LBRACE dictorsetmaker RBRACE
    (96) atom -> . NAME
    (97) atom -> . NUMBER
    (98) atom -> . atom_string_list
    (99) atom_string_list -> . STRING
    (100) atom_string_list -> . atom_string_list STRING

    NOT             shift and go to state 26
    LPAR            shift and go to state 1
    LSQB            shift and go to state 30
    LBRACE          shift and go to state 35
    NAME            shift and go to state 2
    NUMBER          shift and go to state 6
    STRING          shift and go to state 20

    comparison                     shift and go to state 33
    term                           shift and go to state 34
    arith_expr                     shift and go to state 37
    atom_string_list               shift and go to state 5
    or_test                        shift and go to state 38
    and_test                       shift and go to state 28
    power                          shift and go to state 15
    not_test                       shift and go to state 10
    atom                           shift and go to state 4
    test                           shift and go to state 52

state 9

    (20) small_stmt -> return_stmt .

    NEWLINE         reduce using rule 20 (small_stmt -> return_stmt .)
    SEMI            reduce using rule 20 (small_stmt -> return_stmt .)


state 10

    (58) and_test -> not_test .
    (59) and_test -> not_test . and_test_list
    (60) and_test_list -> . AND not_test
    (61) and_test_list -> . and_test_list AND not_test

    OR              reduce using rule 58 (and_test -> not_test .)
    COMMA           reduce using rule 58 (and_test -> not_test .)
    RSQB            reduce using rule 58 (and_test -> not_test .)
    RPAR            reduce using rule 58 (and_test -> not_test .)
    EQUAL           reduce using rule 58 (and_test -> not_test .)
    NEWLINE         reduce using rule 58 (and_test -> not_test .)
    SEMI            reduce using rule 58 (and_test -> not_test .)
    COLON           reduce using rule 58 (and_test -> not_test .)
    RBRACE          reduce using rule 58 (and_test -> not_test .)
    AND             shift and go to state 54

    and_test_list                  shift and go to state 53

state 11

    (21) print_stmt -> PRINT .
    (22) print_stmt -> PRINT . test
    (23) print_stmt -> PRINT . print_list
    (53) test -> . or_test
    (24) print_list -> . test COMMA
    (25) print_list -> . test print_list_list
    (26) print_list -> . test print_list_list COMMA
    (54) or_test -> . and_test
    (55) or_test -> . and_test or_test_list
    (58) and_test -> . not_test
    (59) and_test -> . not_test and_test_list
    (62) not_test -> . comparison
    (63) not_test -> . NOT not_test
    (64) comparison -> . arith_expr
    (65) comparison -> . arith_expr comparison_list
    (74) arith_expr -> . term
    (75) arith_expr -> . term arith_expr_list
    (80) term -> . power
    (81) term -> . power term_list
    (86) power -> . atom
    (87) power -> . atom power_list
    (90) atom -> . LPAR RPAR
    (91) atom -> . LPAR testlist_comp RPAR
    (92) atom -> . LSQB RSQB
    (93) atom -> . LSQB listmaker RSQB
    (94) atom -> . LBRACE RBRACE
    (95) atom -> . LBRACE dictorsetmaker RBRACE
    (96) atom -> . NAME
    (97) atom -> . NUMBER
    (98) atom -> . atom_string_list
    (99) atom_string_list -> . STRING
    (100) atom_string_list -> . atom_string_list STRING

    NEWLINE         reduce using rule 21 (print_stmt -> PRINT .)
    SEMI            reduce using rule 21 (print_stmt -> PRINT .)
    NOT             shift and go to state 26
    LPAR            shift and go to state 1
    LSQB            shift and go to state 30
    LBRACE          shift and go to state 35
    NAME            shift and go to state 2
    NUMBER          shift and go to state 6
    STRING          shift and go to state 20

    comparison                     shift and go to state 33
    term                           shift and go to state 34
    arith_expr                     shift and go to state 37
    atom_string_list               shift and go to state 5
    or_test                        shift and go to state 38
    and_test                       shift and go to state 28
    power                          shift and go to state 15
    not_test                       shift and go to state 10
    atom                           shift and go to state 4
    test                           shift and go to state 56
    print_list                     shift and go to state 55

state 12

    (29) return_stmt -> RETURN .
    (30) return_stmt -> RETURN . testlist
    (35) testlist -> . test
    (36) testlist -> . test COMMA
    (37) testlist -> . test testlist_list
    (38) testlist -> . test testlist_list COMMA
    (53) test -> . or_test
    (54) or_test -> . and_test
    (55) or_test -> . and_test or_test_list
    (58) and_test -> . not_test
    (59) and_test -> . not_test and_test_list
    (62) not_test -> . comparison
    (63) not_test -> . NOT not_test
    (64) comparison -> . arith_expr
    (65) comparison -> . arith_expr comparison_list
    (74) arith_expr -> . term
    (75) arith_expr -> . term arith_expr_list
    (80) term -> . power
    (81) term -> . power term_list
    (86) power -> . atom
    (87) power -> . atom power_list
    (90) atom -> . LPAR RPAR
    (91) atom -> . LPAR testlist_comp RPAR
    (92) atom -> . LSQB RSQB
    (93) atom -> . LSQB listmaker RSQB
    (94) atom -> . LBRACE RBRACE
    (95) atom -> . LBRACE dictorsetmaker RBRACE
    (96) atom -> . NAME
    (97) atom -> . NUMBER
    (98) atom -> . atom_string_list
    (99) atom_string_list -> . STRING
    (100) atom_string_list -> . atom_string_list STRING

    SEMI            reduce using rule 29 (return_stmt -> RETURN .)
    NEWLINE         reduce using rule 29 (return_stmt -> RETURN .)
    NOT             shift and go to state 26
    LPAR            shift and go to state 1
    LSQB            shift and go to state 30
    LBRACE          shift and go to state 35
    NAME            shift and go to state 2
    NUMBER          shift and go to state 6
    STRING          shift and go to state 20

    comparison                     shift and go to state 33
    term                           shift and go to state 34
    arith_expr                     shift and go to state 37
    atom_string_list               shift and go to state 5
    testlist                       shift and go to state 57
    or_test                        shift and go to state 38
    and_test                       shift and go to state 28
    power                          shift and go to state 15
    not_test                       shift and go to state 10
    atom                           shift and go to state 4
    test                           shift and go to state 19

state 13

    (50) funcdef -> DEF . NAME parameters COLON suite

    NAME            shift and go to state 58


state 14

    (1) program -> file_input_star . ENDMARKER
    (4) file_input_star -> file_input_star . stmt
    (9) stmt -> . simple_stmt
    (10) stmt -> . compound_stmt
    (11) simple_stmt -> . small_stmt NEWLINE
    (12) simple_stmt -> . small_stmt_list NEWLINE
    (41) compound_stmt -> . if_stmt
    (42) compound_stmt -> . while_stmt
    (43) compound_stmt -> . for_stmt
    (44) compound_stmt -> . funcdef
    (18) small_stmt -> . expr_stmt
    (19) small_stmt -> . print_stmt
    (20) small_stmt -> . return_stmt
    (13) small_stmt_list -> . small_stmt SEMI
    (14) small_stmt_list -> . small_stmt small_stmt_list_list
    (15) small_stmt_list -> . small_stmt small_stmt_list_list SEMI
    (45) if_stmt -> . IF test COLON suite
    (46) if_stmt -> . IF test COLON suite else_stmt
    (48) while_stmt -> . WHILE test COLON suite
    (49) for_stmt -> . FOR NAME IN testlist COLON suite
    (50) funcdef -> . DEF NAME parameters COLON suite
    (31) expr_stmt -> . testlist
    (32) expr_stmt -> . testlist equal_list
    (21) print_stmt -> . PRINT
    (22) print_stmt -> . PRINT test
    (23) print_stmt -> . PRINT print_list
    (29) return_stmt -> . RETURN
    (30) return_stmt -> . RETURN testlist
    (35) testlist -> . test
    (36) testlist -> . test COMMA
    (37) testlist -> . test testlist_list
    (38) testlist -> . test testlist_list COMMA
    (53) test -> . or_test
    (54) or_test -> . and_test
    (55) or_test -> . and_test or_test_list
    (58) and_test -> . not_test
    (59) and_test -> . not_test and_test_list
    (62) not_test -> . comparison
    (63) not_test -> . NOT not_test
    (64) comparison -> . arith_expr
    (65) comparison -> . arith_expr comparison_list
    (74) arith_expr -> . term
    (75) arith_expr -> . term arith_expr_list
    (80) term -> . power
    (81) term -> . power term_list
    (86) power -> . atom
    (87) power -> . atom power_list
    (90) atom -> . LPAR RPAR
    (91) atom -> . LPAR testlist_comp RPAR
    (92) atom -> . LSQB RSQB
    (93) atom -> . LSQB listmaker RSQB
    (94) atom -> . LBRACE RBRACE
    (95) atom -> . LBRACE dictorsetmaker RBRACE
    (96) atom -> . NAME
    (97) atom -> . NUMBER
    (98) atom -> . atom_string_list
    (99) atom_string_list -> . STRING
    (100) atom_string_list -> . atom_string_list STRING

    ENDMARKER       shift and go to state 59
    IF              shift and go to state 32
    WHILE           shift and go to state 8
    FOR             shift and go to state 22
    DEF             shift and go to state 13
    PRINT           shift and go to state 11
    RETURN          shift and go to state 12
    NOT             shift and go to state 26
    LPAR            shift and go to state 1
    LSQB            shift and go to state 30
    LBRACE          shift and go to state 35
    NAME            shift and go to state 2
    NUMBER          shift and go to state 6
    STRING          shift and go to state 20

    small_stmt                     shift and go to state 3
    atom_string_list               shift and go to state 5
    small_stmt_list                shift and go to state 7
    return_stmt                    shift and go to state 9
    not_test                       shift and go to state 10
    simple_stmt                    shift and go to state 17
    test                           shift and go to state 19
